# sgx-vitelity

./: COPYING  Makefile  README  gateway.lhs  sgx-vitelity.cabal
